dataset1235/2025-2/805158916/users/867352253/executions/3435325918_254684124.log
== SUBMISSION (2025-09-03 14:27:47)
-- CODE: 
if idade>= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:28:57)
-- CODE: 
iade= int(input("Insira sua idade"))

if idade>= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:30:20)
-- CODE: 
idade= int(input("Insira sua idade"))
print(idade)
if idade>= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:29:04)
-- CODE: 
iade= int(input("Insira sua idade"))

if idade>= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if idade>= 18:
       ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:29:54)
-- CODE: 
iade= int(input("Insira sua idade"))
print(idade)
if idade>= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined. Did you mean: 'iade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
